# poker-thingy

./: .clang-format  build-run.sh  build.sh  compile_commands.json  main.c
.cache/clangd/index/: ascii.c.576996B09919BDCB.idx  main.c.CA0CC0C717AB59E6.idx  poker.c.7C21D7FC4FF8B77A.idx  poker.h.026E667D7C021735.idx  table.c.10A97A7F63B709AE.idx  table.h.AB4854A955CF15C6.idx
poker/: CMakeLists.txt
poker/.cache/clangd/index/: ascii.h.AE1EDD80671E64D3.idx  input.c.8E96ABCEC14BB23F.idx  input.h.6C76328EF727ECA7.idx  tui.c.3A928E1AD52E459F.idx  tui.h.F621ECB523656898.idx
poker/src/: input.c  input.h  poker.c  poker.h  table.c  tui.c  tui.h
src/: input.c  poker.c  poker.h  table.h
